packages/rust/holy/tests/fail/04-sanitize-enum.rs
use holy::Sanitize;

#[derive(Sanitize)]
enum Nope {
	A,
	B,
}

fn main() {}
